--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -2,3 +2,8 @@
 // Override Variables
 // 覆盖变量
 // ==============================
+
+$global-link-color: #e7c344;
+$global-link-color-dark: #f6cf47;
+
+
