More specific application of secondary gold color.
Removed author name from display and tweaked summary colors.
Rounded corners and tweaked colors of code fences.
TODO: leftover whitespace in front of "published" in summary.

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -2,3 +2,20 @@
 // Custom style
 // 自定义样式
 // ==============================
+
+// Border radius on code fences
+[theme="dark"] .single .content code {
+	border-radius: 7px;
+}
+
+[theme="dark"] .header-title a, .single-title a{
+	color: $single-link-color-dark !important;
+}
+
+.post-meta .post-author {
+	display: none !important;
+}
+
+[theme="dark"] .home[data-home="posts"] .summary .content {
+	color: $global-font-color-dark;
+}
