--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -3,7 +3,11 @@
 // 覆盖变量
 // ==============================
 
-$global-link-color: #e7c344;
-$global-link-color-dark: #f6cf47;
+//$global-link-color: #e7c344;
+//$global-link-color-dark: #d6a703;
+
+$single-link-color-dark: #d6a703;
+$code-background-color-dark: #353636;
+$code-color-dark: #c6c6d0;
 
 
